[project]
name = "telegram-scheduler-bot"
version = "0.1.0"
description = "Telegram Bot for scheduling messages to groups"
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot==21.8",
    "apscheduler==3.10.4",
    "pytz==2024.1",
    "aiohttp==3.9.1",
    "python-dotenv==1.0.0"
]
